# boxnoteconvertor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
boxtodocx/: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  Test.boxnote  requirements-dev.txt  setup.py
boxtodocx/.github/: README.md
boxtodocx/src/: README.md
boxtodocx/src/boxtodocx/: __init__.py  __main__.py  cli.py  converter.py
boxtodocx/src/boxtodocx/handlers/: Readme.md  __init__.py  docx_handler.py  html_handler.py
boxtodocx/src/boxtodocx/mappers/: Readme.md  __init__.py  html_mapper.py
src/: README.md
src/boxtodocx/: __init__.py  __main__.py  cli.py  converter.py  convertor.py
src/boxtodocx/handlers/: Readme.md  __init__.py  docx_handler.py  html_handler.py
src/boxtodocx/mappers/: Readme.md  __init__.py  html_mapper.py
src/boxtodocx/utils/: Readme.md  box_api.py  browser.py  constants.py  image.py  logger.py
tests/: README.md
